# mantissa

./: CMakeLists.txt  LICENSE  README.org
src/: main.cpp  mantissa.cpp  mantissa.h
tst/: main.cpp  pass_add_negative_positive.cpp  pass_add_negatives.cpp  pass_add_positive_negative.cpp  pass_add_two_positives.cpp  pass_add_zero_sum.cpp  pass_from_float.cpp  pass_mul_3.999999_3.999999.cpp  pass_mul_4.2_10.0.cpp  pass_mul_negative_positive.cpp  pass_mul_negatives.cpp  pass_mul_positive_negative.cpp  pass_mul_positives.cpp  pass_sub_negative_positive.cpp  pass_sub_negatives.cpp  pass_sub_positive_negative.cpp  pass_sub_positives.cpp  pass_to_float.cpp
